[package]
name = "turbogrep"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A CLI refactoring tool that combines the best of find and sed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ansi_term = "0.12"
glob = "0.3"
