[package]
name = "turbogrep"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI refactoring tool that combines the best of find and sed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
glob = "0.3"
clap = {version = "3.0.12", features = ["derive"]}
shellexpand = "2.1"
